changes to prototype

--- a/public/the_bridge_templates/static/v2.html
+++ b/public/the_bridge_templates/static/v2.html
@@ -7,7 +7,7 @@
 
       <div class="jumbotron">
         <h1>1. Choose an origin and destination.</h1>
-        <p class="lead">Your bot will watch for new data from a source, process it however you'd like, and load it into a destination at approximately 3*10^8 m/s. (That's fast.)</p>
+        <p class="lead">Bot will watch for new data from a source, process it however you'd like, and load it into a destination at approximately 3*10^8 m/s. (That's fast.)</p>
         <div class="col-xs-5 center">
           <div class="form-group">
             <label class="control-label">Origin</label>
@@ -42,7 +42,7 @@
 
       <div class="jumbotron">
         <h1>2. Select an event.</h1>
-        <p class="lead">Which event should your bot watch for in CommCare?</p>
+        <p class="lead">Which event should bot watch for in CommCare?</p>
           <div class="form-group">
             <label class="control-label">Origin Event</label>
             <div class="controls">
@@ -63,7 +63,7 @@
 
       <div class="jumbotron">
         <h1>3. Define some actions.</h1>
-        <p class="lead">What do you want your bot to do? We're looking for <em>verbs</em> and <em>nouns</em> here.</p>
+        <p class="lead">What do you want bot to do? We're looking for <em>verbs</em> and <em>nouns</em> here.</p>
         <div class="row">
         <div class="col-xs-6">
           <div class="form-group">
@@ -123,7 +123,7 @@
       </div>
 
       <div class="jumbotron">
-        <h1>4. Teach your bot the job.</h1>
+        <h1>4. Teach bot the job.</h1>
         <p class="lead">You do this one by hand, we'll take care of the next million. Show us how you want to create lab results and update patients in DHIS2 using data from CommCare.</p>
         <div class="alert alert-danger alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -291,7 +291,7 @@
 
       <div class="jumbotron">
         <h1>5. Test it out.</h1>
-        <p class="lead">Look at these sample data we found in CommCare. Review what your bot will do in DHIS2. If everything checks out, click "Test!" and see the result.</p>
+        <p class="lead">Look at these sample data we found in CommCare. Review what bot will do in DHIS2. If everything checks out, click "Test!" and see the result.</p>
         <div class="well">
           <p><strong>Source data</strong> from CommCare: {name: "Anna", age: 14}</p>
           <p><strong>Planned action</strong> in DHIS2: insert {lab_result__c: {name: "blah-007", patient: "this_one", value: 79}</p>
