tagline for case study page

--- a/public/the_bridge_templates/cases/index.html
+++ b/public/the_bridge_templates/cases/index.html
@@ -4,7 +4,7 @@
         our <strong>Impact</strong>
       </h1>
       <h3>
-        Our impact is the increase in our user's impact.
+        We're making technology work better for international development.
       </h3>
     </div>
 </header>
