--- a/public/the_bridge_templates/footer.html
+++ b/public/the_bridge_templates/footer.html
@@ -4,7 +4,7 @@
       <p class="text-center">
         open[Fn] is connecting technologies for a more efficient development sector. All of our code is open source.
         <br><br>
-        <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
+        <a href="https://github.com/OpenFn/" target="_blank">
           Join our developers on github <i class="fa fa-github fa-lg"></i>
         </a>, 
         <a href="mailto:admin@openfn.org" target="_blank">
