--- a/public/the_bridge_templates/static/developers.html
+++ b/public/the_bridge_templates/static/developers.html
@@ -24,7 +24,7 @@
               Describe
           </li>
           <li class="plan-price">
-            <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank"><i class="fa fa-github"></i> ++</a>
+            <a href="https://github.com/OpenFn/" target="_blank"><i class="fa fa-github"></i> ++</a>
           </li>
           <li>
             A call to your server, asking for a description of a particular user's forms, objects, tables, etc.
@@ -57,7 +57,7 @@
               Serialize to JSON
           </li>
           <li class="plan-price">
-            <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank"><i class="fa fa-github"></i> ++</a>
+            <a href="https://github.com/OpenFn/" target="_blank"><i class="fa fa-github"></i> ++</a>
           </li>
           <li>
             Once data from your app reaches us, it must be translated to our universal syntax.
@@ -83,7 +83,7 @@
                   Deserialize from JSON
               </li>
               <li class="plan-price">
-                <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank"><i class="fa fa-github"></i> ++</a>
+                <a href="https://github.com/OpenFn/" target="_blank"><i class="fa fa-github"></i> ++</a>
               </li>
               <li>
                 You take our payload, in the universal JSON, and convert it back to whatever someone else's app wants to read.
