--- a/public/the_bridge_templates/static/v2.html
+++ b/public/the_bridge_templates/static/v2.html
@@ -3,8 +3,9 @@
       <div class="col-md-8 col-md-offset-2">
         <div class="header">
           <br><br>
-          <p class="lead">Our contributors are hard at work on the new "jobs" engine. Have a look at what we're building... it's a complete upgrade of our automatic data integration service.</p>
-          <p class="lead">Think of <strong>OpenFn</strong> as your own personal robot, constantly fetching data from your connected technologies, processing those data however you like, and loading it into another system without ever making a mistake.</p>
+          <p class="lead">Our contributors are hard at work on the new "jobs" engine. Have a look at what we're building... it's a complete upgrade of our automatic data integration platform.</p>
+          <p class="lead">Think of <strong>OpenFn</strong> as your own personal robot, constantly fetching data from your connected technologies, processing those data however you like, and loading them into other systems without ever making a mistake.</p>
+          <p class="lead">When crucial information flows quickly in your organization, you can make better decisions, faster. After you check out the new jobs engine below, click here to look at out how we generate change: <strong><a href="/impact">our impact model</a></strong>.</p>
           <br><br>
         </div>
 
