--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -9,7 +9,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 center">
+        <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 center">
           <h4><span class="digits">{{productPublicCount}}</span> technologies, <span class="digits">{{orgCount}}</span> organizations, <span class="digits">{{productConnectedCount}}</span> connected apps, and <span class="digits">{{submissionCount | number }}</span> transactions.
           </h4>
         </div>
