--- a/public/the_bridge_templates/static/v2.html
+++ b/public/the_bridge_templates/static/v2.html
@@ -127,11 +127,11 @@
         </div>
 
         <div class="jumbotron">
-          <h1>4. Teach bot the job.</h1>
+          <h1>4. Teach your bot the job.</h1>
           <p class="lead">You do this one by hand, we'll take care of the next million. Show us how you want to create lab results and update patients in DHIS2 using data from CommCare.</p>
           <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>In the future</strong>, bot will review all the object and field names and types in both your source and destination. Based on this information, it will be able to suggest a complete job for you, with levels of certainty for each suggested "field pairing". You simply review and approve bot's predictions.
+            <strong>In the future</strong>, your robot will review all the object and field names and types in both your source and destination. Based on this information, it will be able to suggest a complete job for you, with levels of certainty for each suggested "field pairing". You simply review and approve our predictions.
           </div>
           <div class="well">
           <p>Create new lab results</p>
@@ -295,7 +295,7 @@
 
         <div class="jumbotron">
           <h1>5. Test it out.</h1>
-          <p class="lead">Look at these sample data we found in CommCare. Review what bot will do in DHIS2. If everything checks out, click "Test!" and see the result.</p>
+          <p class="lead">Look at these sample data we found in CommCare. Review what we'll do in DHIS2. If everything checks out, click "Test!" and see the result.</p>
           <div class="well">
             <p><strong>Source data</strong> from CommCare: {name: "Anna", age: 14}</p>
             <p><strong>Planned action</strong> in DHIS2: insert {lab_result__c: {name: "blah-007", patient: "this_one", value: 79}</p>
@@ -317,6 +317,7 @@
           <a class="btn btn-green" disabled>on</a>
         </div>
       </div>
+      <p class="lead">Thanks for your time, please let us know what you think of the new design here: <strong><a href="https://docs.google.com/forms/d/1Y0o2uzBT-Kj47l_90wT8C63PAoPbyvSMwMw0taUP2J4/viewform?usp=send_form">a <em>very</em> short form</a></strong>.</p>
     </div>
   </div>
 </div>
