--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -84,87 +84,22 @@
       </div>
     </div>
   </div>
-
-  <div class="container-fluid container-fluid-padding container-max-width margin-large-bottom">
-    <div class="col-sm-12">
-      <div class="product-list row margin-small-top" ontouchstart="this.classList.toggle('hover');">
-
-        <div class="col-xs-12 center" ng-if="isLoading">
-          <br><br><br>
-          <i class="fa fa-refresh fa-2x fa-spin"></i>
-          <h4>
-            <br>
-            Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
-          </h4>
-        </div>
-
-        <div class="col-sm-12 margin-large-bottom margin-large-top">
-
-          <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
-            <div class="product-container col-xl-4 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div ng-class="product.integrated ? 'product integrated' : 'product'" ng-click="go('/product/' + product.id)">
-
-                <div class='rating'>
-                  <span class='live'>
-                    <i class="fa fa-star-o" ng-show="!product.rating"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>0 && product.rating<=0.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>0.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=1"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>1 && product.rating<=1.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>1.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=2"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>2 && product.rating<=2.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>2.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=3"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>3 && product.rating<=3.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>3.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=4"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>4 && product.rating<=4.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>4.5"></i>
-                  </span>
-                  &nbsp;({{product.reviews_count}})
-                </div>
-
-                <h3 class="title">
-                  {{product.name}}
-                </h3>
-
-                <div class='description'>
-                  {{product.description | limitTo:117}}
-                </div>
-
-                <a class="website-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">
-                  <i class="fa fa-link"></i>
-                </a>
-
-                <a class="details-link" ng-click="integratedProduct('/mappings'); $event.stopPropagation()" ng-show="product.integrated && !(product.name=='Telerivet')">
-                  <i class="fa fa-plug"></i>
-                </a>
-
-                <a ng-show="product.name=='Telerivet'" class="details-link" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">
-                  <i class="fa fa-plug"></i>
-                </a>
-
-                <a class="vote-count" style="cursor: auto" ng-hide="product.integrated">
-                  <i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span>
-                </a>
-
-                <a class="details-link" ng-click="changeVoteFor(product); $event.stopPropagation()" ng-show="!product.integrated" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}.">
-                  <i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i>
-                </a>
-
-              </div>
-            </div>
-          </div>
-
-        </div>
-
+</div>
+<br><br>
+<div class="container" ng-controller="MarketplaceController as marketplace">
+  <div class="card-columns">
+    <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
+      <div class="card card-block">
+        <h3 class="card-title">{{product.name}}</h3>
+        <p class='card-text'>{{product.description | limitTo:117}}</p>
+        <a ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
+        <a ng-click="integratedProduct('/mappings'); $event.stopPropagation()" ng-show="product.integrated && !(product.name=='Telerivet')">Connect!</a>
+        <a ng-show="product.name=='Telerivet'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Connect!</a>
+        <a style="cursor: auto" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
+        <a ng-click="changeVoteFor(product); $event.stopPropagation()" ng-show="!product.integrated" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}.">
+          <i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i>
+        </a>
       </div>
     </div>
-
   </div>
 </div>
