--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -1,4 +1,5 @@
-<div class="header-image" ng-controller="MarketplaceController as marketplace">
+<div ng-controller="MarketplaceController as marketplace">
+<div class="header-image">
   <div class="headline container-fluid">
 
     <h2 class="margin-small-bottom">open<strong>Marketplace</strong></h2>
@@ -42,9 +43,9 @@
 
     <div data-accordions-toggle class='accordion-panel-toggle'>
       <svg version="1.1" id="sliders" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-      	 viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
+         viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
         <style type="text/css">
-        	.st0{fill:#374A50;}
+          .st0{fill:#374A50;}
         </style>
         <path id="sliders-bars" class="st0" d="M18,7.5H0v-1h18V7.5z M18,11.5H0v1h18V11.5z M18,1.5H0v1h18V1.5z"/>
         <rect id="slider-bottom" x="3" y="10" class="st0" width="4" height="4"/>
@@ -84,84 +85,31 @@
       </div>
     </div>
   </div>
-
-  <div class="container-fluid container-fluid-padding container-max-width margin-large-bottom">
-    <div class="col-sm-12">
-      <div class="product-list row margin-small-top" ontouchstart="this.classList.toggle('hover');">
-
-        <div class="col-xs-12 center" ng-if="isLoading">
-          <br><br><br>
-          <i class="fa fa-refresh fa-2x fa-spin"></i>
-          <h4>
-            <br>
-            Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
-          </h4>
-        </div>
-
-        <!-- <div class="col-sm-12 margin-large-bottom margin-large-top"> -->
-<div id="grid" data-columns>
-          <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
-            <!-- <div class="product-container col-xl-4 col-lg-6 col-md-6 col-sm-6 col-xs-12"> -->
-              <!-- <div ng-class="product.integrated ? 'product integrated' : 'product'" ng-click="go('/product/' + product.id)"> -->
-
-                <div class='rating'>
-                  <span class='live'>
-                    <i class="fa fa-star-o" ng-show="!product.rating"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>0 && product.rating<=0.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>0.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=1"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>1 && product.rating<=1.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>1.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=2"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>2 && product.rating<=2.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>2.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=3"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>3 && product.rating<=3.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>3.5"></i>
-
-                    <i class="fa fa-star-o" ng-show="product.rating<=4"></i>
-                    <i class="fa fa-star-half-o" ng-show="product.rating>4 && product.rating<=4.5"></i>
-                    <i class="fa fa-star" ng-show="product.rating>4.5"></i>
-                  </span>
-                  &nbsp;({{product.reviews_count}})
-                </div>
-
-                <h3 class="title">
-                  {{product.name}}
-                </h3>
-
-                <div class='description'>
-                  {{product.description | limitTo:117}}
-                </div>
-
-                <a class="website-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">
-                  <i class="fa fa-link"></i>
-                </a>
-
-                <a class="details-link" ng-click="integratedProduct('/mappings'); $event.stopPropagation()" ng-show="product.integrated && !(product.name=='Telerivet')">
-                  <i class="fa fa-plug"></i>
-                </a>
-
-                <a ng-show="product.name=='Telerivet'" class="details-link" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">
-                  <i class="fa fa-plug"></i>
-                </a>
-
-                <a class="vote-count" style="cursor: auto" ng-hide="product.integrated">
-                  <i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span>
-                </a>
-
-                <a class="details-link" ng-click="changeVoteFor(product); $event.stopPropagation()" ng-show="!product.integrated" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}.">
-                  <i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i>
-                </a>
-
-              </div>
-          
 </div>
+
+
+
+<div id="container" class="product">
+
+<div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
+
+<div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12 item">
+<div class="card">
+<div class="card-block">
+  <img class="card-img-top app-logo" src="/images/logos/dhis2.png" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">{{product.name}}</h4>
+    <p class="card-text"> {{product.description | limitTo:117}}</p>
+    <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
+    <a class="card-link" ng-show="product.integrated && !(product.name=='Telerivet')" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Connect</a>
+    <a class="card-link" ng-show="product.name=='Telerivet'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Connect</a>
+    <a class="card-link" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
+    <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
 </div>
-<!-- <div ng-if="false">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/salvattore/1.0.7/salvattore.min.js"></script>
-</div> -->
+</div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/packery/1.4.3/packery.pkgd.js"></script>
+
