--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -98,7 +98,28 @@
         <div class="card-block">
           <img class="card-img-top app-logo" src="/images/logos/dhis2.png" alt="Card image cap">
           <div class="card-block">
-            <h4 class="card-title">{{product.name}}</h4>
+            <h4 class="card-title">{{product.name}}</h4><span class='live'>
+                    <i class="fa fa-star-o" ng-show="!product.rating"></i>
+                    <i class="fa fa-star-half-o" ng-show="product.rating>0 && product.rating<=0.5"></i>
+                    <i class="fa fa-star" ng-show="product.rating>0.5"></i>
+
+                    <i class="fa fa-star-o" ng-show="product.rating<=1"></i>
+                    <i class="fa fa-star-half-o" ng-show="product.rating>1 && product.rating<=1.5"></i>
+                    <i class="fa fa-star" ng-show="product.rating>1.5"></i>
+
+                    <i class="fa fa-star-o" ng-show="product.rating<=2"></i>
+                    <i class="fa fa-star-half-o" ng-show="product.rating>2 && product.rating<=2.5"></i>
+                    <i class="fa fa-star" ng-show="product.rating>2.5"></i>
+
+                    <i class="fa fa-star-o" ng-show="product.rating<=3"></i>
+                    <i class="fa fa-star-half-o" ng-show="product.rating>3 && product.rating<=3.5"></i>
+                    <i class="fa fa-star" ng-show="product.rating>3.5"></i>
+
+                    <i class="fa fa-star-o" ng-show="product.rating<=4"></i>
+                    <i class="fa fa-star-half-o" ng-show="product.rating>4 && product.rating<=4.5"></i>
+                    <i class="fa fa-star" ng-show="product.rating>4.5"></i>
+                  </span>
+                  &nbsp;({{product.reviews_count}})
             <p class="card-text"> {{product.description | limitTo:117}}</p>
             <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
               <a class="card-link" ng-show="product.integrated && !(product.name=='Telerivet')" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Connect</a>
